Improvements for BPM based applications